--- a/index.html
+++ b/index.html
@@ -243,6 +243,17 @@
 					</div>
 				</div>
 			</div>
+
+			<div class="container">
+				<div class="row">
+					<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
+						<h3>Our Mission</h3>
+						<p>Connect with a Local school who are not able to teach Computer Science.</p>
+						<p>Teach the basics of computer science using  <a href="https://scratch.mit.edu/">MIT's Scratch</a> using stories</p>
+						<p>Donate at least one Desktop computer to the local school so kids can use for practice</p>
+					</div>
+				</div>
+			</div>
 			<div class="container">
 				<div class="row">
 					<div class="col-md-4">
