--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 						<div class="row">
 							<div class="col-md-6 col-md-offset-3 text-center heading-section animate-box">
 								<h3>Our Gallery</h3>
-								<p>Kids at a school in our community learning how to dr.</p>
+								<p>Kids at a school in our community learning how to draw Shapes on a computer.</p>
 							</div>
 						</div>
 		
@@ -319,7 +319,7 @@
 							<div class="col-md-12">
 								<ul id="fh5co-portfolio-list">
 		
-									<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/cover_bg_4.jpg); ">
+									<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/cover_bg_14.jpg); ">
 										<a href="https://www.youtube.com/channel/UCWvziTvfiNHvJtlko9_3eHA" class="color-3">
 											<div class="case-studies-summary">
 												<span>View our Youtube page</span>
@@ -328,7 +328,7 @@
 										</a>
 									</li>
 								
-									<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/cover_bg_5.jpg); ">
+									<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/cover_bg_15.jpg); ">
 										<a href="https://www.youtube.com/channel/UCWvziTvfiNHvJtlko9_3eHA" class="color-4">
 											<div class="case-studies-summary">
 												<span>View our Youtube page</span>
@@ -337,7 +337,7 @@
 										</a>
 									</li>
 		
-									<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/cover_bg_6.jpg); "> 
+									<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/cover_bg_16.jpg); "> 
 										<a href="https://www.youtube.com/channel/UCWvziTvfiNHvJtlko9_3eHA" class="color-5">
 											<div class="case-studies-summary">
 												<span>View our Youtube page</span>
@@ -345,7 +345,42 @@
 											</div>
 										</a>
 									</li>
-									<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/cover_bg_7.jpg); ">
+									<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/cover_bg_17.jpg); ">
+										<a href="https://www.youtube.com/channel/UCWvziTvfiNHvJtlko9_3eHA" class="color-6">
+											<div class="case-studies-summary">
+												<span>View our Youtube page</span>
+												<h2>(Support Education in Africa)</h2>
+											</div>
+										</a>
+									</li>
+
+									<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/cover_bg_18.jpg); ">
+										<a href="https://www.youtube.com/channel/UCWvziTvfiNHvJtlko9_3eHA" class="color-3">
+											<div class="case-studies-summary">
+												<span>View our Youtube page</span>
+												<h2>(Support Education in Africa)</h2>
+											</div>
+										</a>
+									</li>
+								
+									<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/cover_bg_19.jpg); ">
+										<a href="https://www.youtube.com/channel/UCWvziTvfiNHvJtlko9_3eHA" class="color-4">
+											<div class="case-studies-summary">
+												<span>View our Youtube page</span>
+												<h2>(Support Education in Africa)</h2>
+											</div>
+										</a>
+									</li>
+		
+									<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/cover_bg_20.jpg); "> 
+										<a href="https://www.youtube.com/channel/UCWvziTvfiNHvJtlko9_3eHA" class="color-5">
+											<div class="case-studies-summary">
+												<span>View our Youtube page</span>
+												<h2>(Support Education in Africa)</h2>
+											</div>
+										</a>
+									</li>
+									<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/cover_bg_21.jpg); ">
 										<a href="https://www.youtube.com/channel/UCWvziTvfiNHvJtlko9_3eHA" class="color-6">
 											<div class="case-studies-summary">
 												<span>View our Youtube page</span>
