--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 		
 						<div class="row">
 							<div class="col-md-6 col-md-offset-3 text-center heading-section animate-box">
-								<h3>Our Gallery</h3>
+								<h3>Another Day Teaching these amazing kids, Shapes Color, Size</h3>
 								<p>Kids at a school in our community learning how to draw Shapes on a computer.</p>
 							</div>
 						</div>
